# soundchartspy

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml
docs/: api_reference.rst  client.rst  conf.py  data.rst  index.rst  requirements.txt
soundchartspy/: __init__.py  client.py  data.py  exceptions.py  playlist.py  song.py  soundcharts.py  utils.py
src/soundchartspy/: album.py  error.py  logging_config.py  song.py  soundcharts.py  soundchartspy.py
src/tests/: test_soundcharts-py.py
tests/: logging_config.py  test_client.py  test_soundcharts-py.py
